@startuml domain_model
skinparam classAttributeIconSize 0
skinparam linetype ortho

package "Domain Model (Entities & Core Logic)" {

    ' --- GERARCHIA UTENTI ---
    abstract class Utente {
        - id: String
        - email: String
        - passwordHash: String
        - ruolo: String
        + equals(o: Object): boolean
        + hashCode(): int
        + toString(): String
    }
    class Cliente {
        - nome: String
        - telefono: String
        - ultimaNotifica: String
        + update(s: Stanza, d: Date): void
    }
    class GameMaster {
        - matricola: String
    }
    class Admin {
        - livelloAccesso: int
    }
    Utente <|-- Cliente
    Utente <|-- GameMaster
    Utente <|-- Admin

    class Stanza {
        - id: String
        - sedeId: String
        - tema: String
        - capienzaMax: int
        - prezzoBase: double
        + setStato(nuovoStato: RoomState): void
        + calcolaPrezzo(giocatori: int): double
        + equals(o: Object): boolean
        + hashCode(): int
        + toString(): String
    }

    ' --- PRENOTAZIONE con Builder Pattern ---
    class Prenotazione {
        - id: String
        - dataOra: Date
        - numeroGiocatori: int
        - prezzoTotale: double
        - statoPartita: StatoPartita
    }
    class "Prenotazione.Builder" as PBuilder <<Builder>> {
        + id(id: String): Builder
        + clienteId(id: String): Builder
        + stanzaId(id: String): Builder
        + dataOra(dt: Date): Builder
        + numeroGiocatori(n: int): Builder
        + prezzoTotale(p: double): Builder
        + statoPartita(s: StatoPartita): Builder
        + build(): Prenotazione
    }
    PBuilder ..> Prenotazione : <<creates>>

    Cliente "1" -- "*" Prenotazione : effettua >
    Prenotazione "*" -- "1" Stanza : riservata per >

    ' Observer Pattern per Lista Attesa
    interface WaitingListObserver <<Observer>> {
        + update(stanza: Stanza, data: Date): void
    }
    class WaitingList <<Subject>> {
        - observers: List<WaitingListObserver>
        + attach(o: WaitingListObserver): void
        + detach(o: WaitingListObserver): void
        + notifyObservers(s: Stanza, d: Date): void
        + getObservers(): List (copia difensiva)
        + getObserverCount(): int
    }
    Cliente ..|> WaitingListObserver
    Stanza "1" -- "1" WaitingList : ha >

    ' --- STATE PATTERN (Ciclo di vita Stanza) ---
    interface RoomState <<State>> {
        + prenota(s: Stanza): void
        + iniziaSessione(s: Stanza): void
        + terminaSessione(s: Stanza): void
        + setManutenzione(s: Stanza): void
        + setDisponibile(s: Stanza): void
    }
    class DisponibileState implements RoomState
    class InCorsoState implements RoomState
    class InPuliziaState implements RoomState
    class InManutenzioneState implements RoomState

    Stanza o-- "1" RoomState : statoCorrente

    ' --- STRATEGY PATTERN (Prezzi Dinamici) ---
    interface PricingStrategy <<Strategy>> {
        + calcola(prezzoBase: double, giocatori: int): double
    }
    class TariffaBase implements PricingStrategy
    class TariffaWeekend implements PricingStrategy

    Stanza o-- "1" PricingStrategy : usa
}

' --- Collaboration Annotations (Design Pattern Roles) ---
note right of RoomState
    **State Pattern - GoF Behavioral**
    Elimina gli if/else per la gestione
    del ciclo di vita della Stanza.
    **Context:** Stanza
    **State:** RoomState (interface)
    **ConcreteState:** Disponibile, InCorso,
    InPulizia, InManutenzione
end note

note right of PricingStrategy
    **Strategy Pattern - GoF Behavioral**
    Calcolo dinamico delle tariffe
    intercambiabile a runtime.
    **Context:** Stanza
    **Strategy:** PricingStrategy (interface)
    **ConcreteStrategy:** TariffaBase, TariffaWeekend
end note

note top of WaitingList
    **Observer Pattern - GoF Behavioral**
    Notifica asincrona dei clienti in lista d'attesa.
    **Subject:** WaitingList
    **Observer:** WaitingListObserver (interface)
    **ConcreteObserver:** Cliente
    getObservers() usa **copia difensiva**
end note

note bottom of PBuilder
    **Builder Pattern - GoF Creational**
    Costruzione fluente della Prenotazione
    evitando costruttori con 7 parametri.
    **Director:** PrenotazioneController
    **Builder:** Prenotazione.Builder
    **Product:** Prenotazione
end note

@enduml
